<resources>
    <string name="app_name">Mine</string>
    <string name="mine_login">登录/注册</string>
    <string name="login_ins">登录后查看详细信息~</string>
    <string name="test">test</string>
    <string name="person">图标</string>
    <string name="messge">图标</string>
    <string name="moment_msg">书友吧</string>
    <string name="myrelease">图标</string>
    <string name="myrelease_text">我的发布</string>
    <string name="myfavorite">图标</string>
    <string name="myfavorite_text">我的收藏</string>
    <string name="line" />
    <string name="myanser">图标</string>
    <string name="myanser_text">我的回复</string>
    <string name="anserme">图标</string>
    <string name="anserme_text">回复我的</string>
    <string name="note_msg">笔记</string>
    <string name="note">图标</string>
    <string name="note_text">我的笔记</string>
    <string name="friends_msg">好友</string>
    <string name="friends">图标</string>
    <string name="friends_text">我的好友</string>
    <string name="arrow_right">跳转图标</string>
    <string name="login_text">登录/注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">用户名:</string>
    <string name="password">密码：</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="email">邮箱：</string>
</resources>
